// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
.S1 {
  color: rgba(133,0,41,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  line-height: 27px;
}

.S2 {
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
}
</style>

<div
  className="S2"
>
  <div
    className="S1"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. with a very long byline 1`] = `
<style>
.S1 {
  color: rgba(133,0,41,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  line-height: 27px;
}

.S2 {
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
}
</style>

<div
  className="S2"
>
  <div
    className="S1"
  >
    Camilla Long
  </div>
  <div
    className="S1"
  >
    , Environment Editor | 
  </div>
  <div
    className="S1"
  >
    Camilla Long
  </div>
  <div
    className="S1"
  >
    , Environment Editor | 
  </div>
  <div
    className="S1"
  >
    Camilla Long
  </div>
  <div
    className="S1"
  >
    , Environment Editor
  </div>
</div>
`;
